@@ -8,10 +8,10 @@ MapReduce(-1) - -3:
 |       |---Package(Packager)[tuple]{Unknown} - --5758282087831209061
 |   Local Rearrange[tuple]{Unknown}(false) - -3709512757404691843
 |   |
-|   |---Load(file:/tmp/temp-1456742965/tmp-1456742965:org.apache.pig.impl.io.InterStorage) - -2
+|   |---Load(file:/tmp/temp-1456742965/tmp2077335416:org.apache.pig.impl.io.InterStorage) - -2
 |
 |---MapReduce(-1) - -0:
-    |   Store(file:/tmp/temp-1456742965/tmp-1456742965:org.apache.pig.impl.io.InterStorage) - -1
+    |   Store(file:/tmp/temp-1456742965/tmp2077335416:org.apache.pig.impl.io.InterStorage) - -1
     |   |
     |   |---Package(Packager)[tuple]{Unknown} - --2057425961601007773
     |   Local Rearrange[tuple]{Unknown}(false) - --8361563503038121624
