@@ -4,12 +4,12 @@ Reduce Plan Empty
 |   |
 |   |---Union[tuple] - --5768272326302808468
 |       |
-|       |---Load(file:/tmp/temp-1456742965/tmp-1456742965:org.apache.pig.impl.io.InterStorage) - -3
+|       |---Load(file:/tmp/temp-1456742965/tmp2077335416:org.apache.pig.impl.io.InterStorage) - -3
 |       |
-|       |---Load(file:/tmp/temp-1456742965/tmp2077335416:org.apache.pig.impl.io.InterStorage) - -5
+|       |---Load(file:/tmp/temp-1456742965/tmp-26634357:org.apache.pig.impl.io.InterStorage) - -5
 |
 |---MapReduce(-1) - -0:
-|   |   Store(file:/tmp/temp-1456742965/tmp-1456742965:org.apache.pig.impl.io.InterStorage) - -4
+|   |   Store(file:/tmp/temp-1456742965/tmp2077335416:org.apache.pig.impl.io.InterStorage) - -4
 |   |   |
 |   |   |---Package(Packager)[tuple]{Unknown} - --2829086180578157275
 |   |   Local Rearrange[tuple]{Unknown}(false) - -6435233330554227045
@@ -17,7 +17,7 @@ Reduce Plan Empty
 |   |   |---Load(DummyFil:DummyLdr) - --4168060277593001906
 |
 |---MapReduce(-1) - -1:
-    |   Store(file:/tmp/temp-1456742965/tmp2077335416:org.apache.pig.impl.io.InterStorage) - -6
+    |   Store(file:/tmp/temp-1456742965/tmp-26634357:org.apache.pig.impl.io.InterStorage) - -6
     |   |
     |   |---Package(Packager)[tuple]{Unknown} - -7483213803049293823
     |   Local Rearrange[tuple]{Unknown}(false) - --5190071275724378681
