@@ -10,12 +10,12 @@ Reduce Plan Empty
 |       |   |
 |       |   |---Load(DummyFil:DummyLdr) - --4776862487779398064
 |       |
-|       |---Load(file:/tmp/temp-1456742965/tmp-1456742965:org.apache.pig.impl.io.InterStorage) - -4
+|       |---Load(file:/tmp/temp-1456742965/tmp2077335416:org.apache.pig.impl.io.InterStorage) - -4
 |       |
-|       |---Load(file:/tmp/temp-1456742965/tmp2077335416:org.apache.pig.impl.io.InterStorage) - -6
+|       |---Load(file:/tmp/temp-1456742965/tmp-26634357:org.apache.pig.impl.io.InterStorage) - -6
 |
 |---MapReduce(-1) - -0:
-|   |   Store(file:/tmp/temp-1456742965/tmp-1456742965:org.apache.pig.impl.io.InterStorage) - -5
+|   |   Store(file:/tmp/temp-1456742965/tmp2077335416:org.apache.pig.impl.io.InterStorage) - -5
 |   |   |
 |   |   |---Package(Packager)[tuple]{Unknown} - --3671186819751472084
 |   |   Local Rearrange[tuple]{Unknown}(false) - -3737603423295312892
@@ -23,7 +23,7 @@ Reduce Plan Empty
 |   |   |---Load(DummyFil:DummyLdr) - --5123390619301085966
 |
 |---MapReduce(-1) - -2:
-    |   Store(file:/tmp/temp-1456742965/tmp2077335416:org.apache.pig.impl.io.InterStorage) - -7
+    |   Store(file:/tmp/temp-1456742965/tmp-26634357:org.apache.pig.impl.io.InterStorage) - -7
     |   |
     |   |---Package(Packager)[tuple]{Unknown} - --2325244147060806375
     |   Local Rearrange[tuple]{Unknown}(false) - --1194577301115518934
