@@ -16,12 +16,12 @@ Reduce Plan Empty
 |       |   |
 |       |   |---Load(DummyFil:DummyLdr) - -7219092146411102494
 |       |
-|       |---Load(file:/tmp/temp-1456742965/tmp-1456742965:org.apache.pig.impl.io.InterStorage) - -5
+|       |---Load(file:/tmp/temp-1456742965/tmp2077335416:org.apache.pig.impl.io.InterStorage) - -5
 |       |
-|       |---Load(file:/tmp/temp-1456742965/tmp2077335416:org.apache.pig.impl.io.InterStorage) - -7
+|       |---Load(file:/tmp/temp-1456742965/tmp-26634357:org.apache.pig.impl.io.InterStorage) - -7
 |
 |---MapReduce(-1) - -2:
-|   |   Store(file:/tmp/temp-1456742965/tmp-1456742965:org.apache.pig.impl.io.InterStorage) - -6
+|   |   Store(file:/tmp/temp-1456742965/tmp2077335416:org.apache.pig.impl.io.InterStorage) - -6
 |   |   |
 |   |   |---Package(Packager)[tuple]{Unknown} - -810744320494301308
 |   |   Local Rearrange[tuple]{Unknown}(false) - --5111685507913827932
@@ -29,7 +29,7 @@ Reduce Plan Empty
 |   |   |---Load(DummyFil:DummyLdr) - --2426993543147308005
 |
 |---MapReduce(-1) - -3:
-    |   Store(file:/tmp/temp-1456742965/tmp2077335416:org.apache.pig.impl.io.InterStorage) - -8
+    |   Store(file:/tmp/temp-1456742965/tmp-26634357:org.apache.pig.impl.io.InterStorage) - -8
     |   |
     |   |---Package(Packager)[tuple]{Unknown} - -7127277012934370361
     |   Local Rearrange[tuple]{Unknown}(false) - --8622295867288126988
